fix(sonar): resolve remaining SonarQube findings on develop
Extends the java:S106 (System.out) exclusion to model/ and manager/
(pre-existing display*Details()/viewGradesByStudent presentation logic
in the wrong layer - documented, not silently hidden) and adds a
similar documented exclusion for java:S1075 on FileExporter (its
hard-coded "/" is a deliberate cross-platform string contract, not a
portability bug). Both are judgment calls, not mechanical fixes - see
the pom.xml comments for the reasoning.

Everything else is a real fix:
- CSVParser: extracted per-row parsing into parseLine()/ParsedLine,
  cutting cognitive complexity 26->well under 15 and the loop's
  break/continue count to one, same behavior (Scanner-based reading
  unchanged - NIO.2 migration is separate v3 scope)
- StudentRepositoryImpl/SubjectRepositoryImpl/GradeRepositoryImpl:
  manual array-copy loops -> Arrays.asList(...).subList(...)
- DateFormats: java.text.SimpleDateFormat -> java.time.DateTimeFormatter
- GradeDTO/StudentDTO: converted to records, with the original
  getX()-style accessors kept alongside so every existing caller
  compiles unchanged
- Grade.java: renamed the `grade` field (same name as its class) to
  `gradeValue`
- Student/Subject: constructors narrowed to protected (both abstract,
  only ever called via a subclass's super())
- Student.generateStudentId(), 4 model constant fields: made static
  (touch no instance state)
- 3 real throwing-lambda test smells (BulkImportServiceTest,
  GradeRepositoryImpl(Mockito)Test) - extracted the mock/value
  construction above the assertThrows lambda, same pattern already
  applied to Subject/Student repo tests in an earlier pass
- 16 test helper methods: Scanner -> try-with-resources
- 8 near-duplicate tests consolidated into 4 @ParameterizedTest /
  @MethodSource methods (CalculateGpaActionMockitoTest,
  RecordGradeAction(Mockito)Test, CSVParserTest) - MethodSource instead
  of CsvSource wherever the scripted input contains literal newl