@@ -10,7 +10,6 @@ import main.model.student.Student;
 import main.utils.DateFormats;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Builds the text content for a student's exported grade report. Resolves
@@ -24,6 +23,8 @@ public class ReportGenerator implements Exportable {
 
     private static final double EXCELLENT_THRESHOLD = 80.0;
     private static final double GOOD_THRESHOLD = 60.0;
+    private static final String PERCENT_ONE_DECIMAL = "%.1f%%";
+    private static final String SECTION_DIVIDER = "------------------------------------------------\n";
 
     private final GradeManager gradeManager;
     private final StudentManager studentManager;
@@ -44,7 +45,7 @@ public class ReportGenerator implements Exportable {
         sb.append("================================\n\n");
         sb.append("Student ID: ").append(studentId).append("\n");
         sb.append("Name: ").append(studentName(student)).append("\n");
-        sb.append("Overall Average: ").append(String.format("%.1f%%", overallAverage)).append("\n\n");
+        sb.append("Overall Average: ").append(String.format(PERCENT_ONE_DECIMAL, overallAverage)).append("\n\n");
         sb.append("================================\n");
         sb.append("Generated on: ").append(timestamp()).append("\n");
         return sb.toString();
@@ -62,12 +63,12 @@ public class ReportGenerator implements Exportable {
         sb.append("Name: ").append(studentName(student)).append("\n\n");
 
         sb.append("GRADE HISTORY\n");
-        sb.append("------------------------------------------------\n");
+        sb.append(SECTION_DIVIDER);
         sb.append(String.format("%-8s | %-10s | %-16s | %-9s | %s%n", "GRD ID", "DATE", "SUBJECT", "TYPE", "GRADE"));
-        sb.append("------------------------------------------------\n");
+        sb.append(SECTION_DIVIDER);
 
         List<Grade> grades = gradeManager.getGradesForStudent(studentId);
-        List<GradeDTO> gradeDtos = grades.stream().map(GradeMapper::toDto).collect(Collectors.toList());
+        List<GradeDTO> gradeDtos = grades.stream().map(GradeMapper::toDto).toList();
         for (GradeDTO g : gradeDtos) {
             sb.append(String.format("%-8s | %-10s | %-16s | %-9s | %.1f%%%n",
                     g.getGradeId(), g.getDate(), g.getSubjectName(),
@@ -75,11 +76,11 @@ public class ReportGenerator implements Exportable {
         }
 
         double overallAverage = gradeManager.calculateOverallAverage(studentId);
-        sb.append("------------------------------------------------\n");
+        sb.append(SECTION_DIVIDER);
         sb.append("Total Grades: ").append(grades.size()).append("\n");
-        sb.append("Core Average: ").append(String.format("%.1f%%", gradeManager.calculateCoreAverage(studentId))).append("\n");
-        sb.append("Elective Average: ").append(String.format("%.1f%%", gradeManager.calculateElectiveAverage(studentId))).append("\n");
-        sb.append("Overall Average: ").append(String.format("%.1f%%", overallAverage)).append("\n\n");
+        sb.append("Core Average: ").append(String.format(PERCENT_ONE_DECIMAL, gradeManager.calculateCoreAverage(studentId))).append("\n");
+        sb.append("Elective Average: ").append(String.format(PERCENT_ONE_DECIMAL, gradeManager.calculateElectiveAverage(studentId))).append("\n");
+        sb.append("Overall Average: ").append(String.format(PERCENT_ONE_DECIMAL, overallAverage)).append("\n\n");
 
         // Performance analysis: part of US-2's acceptance criteria
         // ("...performance analysis") but previously only implemented in a
@@ -87,7 +88,7 @@ public class ReportGenerator implements Exportable {
         // KI-2. Folded directly into the detailed report instead of keeping
         // a second, unreachable method around.
         sb.append("PERFORMANCE ANALYSIS\n");
-        sb.append("------------------------------------------------\n");
+        sb.append(SECTION_DIVIDER);
         sb.append(performanceSummary(overallAverage)).append("\n");
 
         sb.append("================================\n");
